<resources>
    <string name="app_name">BorrowMe</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="log_in_caps">LOG IN</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="already_registered">Already registered?</string>
    <string name="our_categories">Our categories</string>
    <string name="choose_categories_explanation">Pick 3 categories to borrow items someday. No strings attached! 🧐</string>
    <string name="before_we_start">Help us to help you helps others 🤝</string>
    <string name="category_title">Category</string>
    <string name="Finish">Finish 🎉</string>
    <string name="welcome">WELCOME</string>
    <string name="go_back">Go Back</string>
    <string name="number_of_categories">Number of categories : </string>
    <string name="search_hint">Add your address</string>
    <string name="get_current_location">Use my current location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_inbox">Inbox</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_borrowing">Lets Borrow Me !</string>
    <string name="common_products">Common Products</string>
    <string name="my_history">Where have we been until now? 🫣</string>
    <string name="i_have_a_product">I have a product</string>
    <string name="my_location">My Location</string>
    <string name="placeholder_location">address</string>
    <string name="categories">Categories</string>
    <string name="rating">"My Rating "</string>
    <string name="inbox">Inbox</string>
    <string name="user_name">User name</string>
    <string name="new_borrow_request">New Borrow Request</string>
    <string name="category_hint">Select the categories</string>
    <string name="item_name_hint">Item Name</string>
    <string name="description_hint">Description the item</string>
    <string name="submit_request">SUBMIT</string>
    <string name="distance_1km">1km</string>
    <string name="distance_5km">5km</string>
    <string name="distance_10km">10km</string>
    <string name="_0">0</string>
    <string name="change_password">Change Your Password</string>
    <string name="change_location">Change Your Location</string>
    <string name="manage_categories">Manage Your Categories</string>
    <string name="save_changes">SAVE</string>
    <string name="new_password">New password</string>
    <string name="save_new_password">SAVE NEW PASSWORD</string>
    <string name="save_new_location">SAVE NEW LOCATION</string>
    <string name="update_your_categories">UPDATE YOUR CATEGORIES</string>
    <string name="settings_title">SETTINGS</string>
    <string name="select_category">Select Categories</string>
    <string name="insert_your_password">Insert your current password :</string>
    <string name="where_have_we_been_until_now">Where have we been ? 🫣</string>
    <string name="history">NO BORROW ‍🤦🏾‍♂🤦🏻‍♀️</string>
    <string name="borrow_status">BORROW STATUS</string>
    <string name="is_complete">Is the borrow finish?</string>
    <string name="your_history">Your History</string>
    <string name="collection_borrowmap">borrowMap</string>
    <string name="collection_receivedborrowmap">receivedBorrowMap</string>
    <string name="collection_history">history</string>
    <string name="collection_messages">Messages</string>
    <string name="description">Description:</string>
    <string name="categories_title">Categories:</string>
    <string name="radius">Radius:</string>
    <string name="address_of_borrow">Address of borrow:</string>
    <string name="sender">Sender:</string>
    <string name="approve">APPROVE</string>
    <string name="reject">REJECT</string>
    <string name="title">New Borrow</string>
</resources>