<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:background="@drawable/custom_edittext">

    <androidx.cardview.widget.CardView
        android:id="@+id/borrow_item_CARD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/smallButtonColor"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_xsmall">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/name_and_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_item_name"
                    android:layout_width="@dimen/card_width_size"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/item_name_hint"
                    android:textColor="@color/tittle_color"
                    android:textSize="@dimen/text_size_main_button_s"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_date"
                    android:layout_width="@dimen/card_width_size"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_xxxsmall"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_borrow"
                    android:textStyle="italic" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/borrow_item_LINEARLAYOUT_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrow_status"
                    android:textColor="@color/smallButton_text_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/borrow_item_SIV_statusIcon"
                    android:layout_width="@dimen/status_icon_size"
                    android:layout_height="@dimen/status_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:src="@drawable/sand_clock" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Detail Views, initially hidden -->
            <LinearLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_and_date"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_sender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:text="@string/sender"
                    android:textSize="@dimen/text_borrow"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_sender"
                    android:layout_width="@dimen/card_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxxsmall"
                    android:text="@string/user_name"
                    android:textColor="@color/smallButton_text_color"
                    android:textSize="@dimen/text_borrow" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:text="@string/address_of_borrow"
                    android:textSize="@dimen/text_borrow"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_address"
                    android:layout_width="@dimen/card_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxxsmall"
                    android:text="@string/my_location"
                    android:textColor="@color/smallButton_text_color"
                    android:textSize="@dimen/text_borrow" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:text="@string/radius"
                    android:textSize="@dimen/text_borrow"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxxsmall"
                    android:text="@string/distance_5km"
                    android:textColor="@color/smallButton_text_color"
                    android:textSize="@dimen/text_borrow" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:text="@string/categories_title"
                    android:textSize="@dimen/text_borrow"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxxsmall"
                    android:textColor="@color/smallButton_text_color"
                    android:textSize="@dimen/text_borrow"
                    tools:text="sport, toys, tools" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    android:text="@string/description"
                    android:textSize="@dimen/text_borrow"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/borrow_item_MTV_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xxxsmall"
                    android:text="@string/description_hint"
                    android:textColor="@color/smallButton_text_color"
                    android:textSize="@dimen/text_borrow" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
