<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".logIns.SignUpActivity">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUp_MTV_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/login_title_size"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />
    <EditText
        android:id="@+id/signUp_ET_userName"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_MTV_title"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_marginHorizontal="@dimen/small_general_size"
        android:padding="@dimen/small_general_size"
        android:hint="@string/full_name"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="@dimen/small_general_size"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:inputType="text"
        android:importantForAutofill="no"
        >
    </EditText>

            <EditText
                android:id="@+id/signUp_ET_email"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_ET_userName"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="@dimen/general_dimension"
                android:layout_marginHorizontal="@dimen/small_general_size"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/small_general_size"
                android:hint="@string/email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="@dimen/small_general_size"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                >
            </EditText>

            <EditText
                android:id="@+id/signUp_ET_password"
                android:layout_width="@dimen/card_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_ET_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="@dimen/general_dimension"
                android:layout_marginHorizontal="@dimen/small_general_size"
                android:padding="@dimen/small_general_size"
                android:hint="@string/password"
                android:drawableLeft="@drawable/lock"
                android:layout_centerHorizontal="true"
                android:drawablePadding="@dimen/small_general_size"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                >
            </EditText>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp_BTN_LOGIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_ET_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/sign_up_caps"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                android:backgroundTint="@color/text_color"
                >
            </com.google.android.material.button.MaterialButton>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/small_margin_top"
                android:layout_below="@+id/signUp_BTN_LOGIN"
                android:layout_centerHorizontal="true"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/signUp_MTV_notRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered"
                    android:textColor="@color/black"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/signUp_MTV_LogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_general_size"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </RelativeLayout>
