<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".logIns.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_xsmall"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/tittle_color"
        android:textStyle="bold"
        android:text="@string/welcome" />

    <androidx.cardview.widget.CardView
        android:id="@+id/LogIn_CARD_logIn"
        android:layout_width="@dimen/size_regular"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_below="@id/login_MTV_title"
        android:layout_marginTop="@dimen/size_xsmall"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_small"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_medium"
            android:background="@drawable/custom_edittext"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/LogIn_MTV_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_regular"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/LogIn_ET_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_xsmall"
                android:padding="@dimen/margin_xsmall"
                android:hint="@string/email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="@dimen/margin_xsmall"
                android:textColor="@color/text_color"
                android:inputType="textEmailAddress"
               >
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/LogIn_ET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_xsmall"
                android:padding="@dimen/margin_xsmall"
                android:hint="@string/password"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="@dimen/margin_xsmall"
                android:textColor="@color/text_color"
                android:inputType="textPassword"
                >
            </androidx.appcompat.widget.AppCompatEditText>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/LogIn_BTN_LOGIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/log_in_caps"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_main_button_s"
                android:backgroundTint="@color/buttonColor"
                >
            </com.google.android.material.button.MaterialButton>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/LogIn_MTV_notRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered_yet"
                    android:textSize="@dimen/text_size_xsmall"
                    android:textColor="@color/text_color"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/LogIn_MTV_singUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_xsmall"
                    android:text="@string/sign_up_caps"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/tittle_color"
                    />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


</RelativeLayout>