<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingsFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/settings_IMG_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/arrow_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <!-- Change Username -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_ET_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Change Email -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_ET_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Update Password Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_BTN_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/change_password"
                android:textColor="@color/button_text_color" />

            <!-- Manage Categories -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_BTN_manageCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/manage_categories"
                android:textColor="@color/button_text_color" />

            <!-- Save Changes Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_BTN_saveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/save_changes"
                android:textColor="@color/button_text_color" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
